fixed issue with column width jumping

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -87,6 +87,7 @@ label {
   border-top: 0 !important;
   border-collapse: separate !important;
   border-spacing: 0 !important;
+  table-layout: fixed !important;
 }
 
 #myTable th {
